Bug 474551 - Whitespace indicator shows wrong when using right-to-left scripts.
Summary: Whitespace indicator shows wrong when using right-to-left scripts.
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.3
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-15 13:19 UTC by demorphism
Modified: 2023-09-17 11:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Picture of bug (25.22 KB, image/png)
2023-09-15 13:19 UTC, demorphism
Details

Note You need to log in before you can comment on or make changes to this bug.
Description demorphism 2023-09-15 13:19:40 UTC
Created attachment 161635 [details]
Picture of bug

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***
RTL: Right-to-Left, LTR: Left-to-Right

STEPS TO REPRODUCE
Bug1. Use RTL script with spaces. (Such as Arabic, Hebrew, Punjabi)(example: ال ال)
Bug2. Insert an Arabic phrase with spaces inside it in a LTR sentence.(example: a ال ال a)

OBSERVED RESULT
Bug1. No whitespace indicator is seen.
Bug2. The whitespace indicator in the Arabic phrase is shown right of it's cursor position. (see attached picture) 

EXPECTED RESULT
Bug1. Whitespace indicator is seen.
Bug2. The whitespace indicator in the Arabic phrase is shown left of it's cursor position. (see attached picture) 

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 23.04
(available in About System)
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-09-16 15:04:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/599
Comment 2 Christoph Cullmann 2023-09-17 11:44:09 UTC
Git commit 92a4f9323b2a98104802fea12c30dcabfcd0d8fc by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 17/09/2023 at 13:39.
Pushed by cullmann into branch 'master'.

Fix spaces not visualized in rtl text

M  +7    -2    src/render/katerenderer.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/92a4f9323b2a98104802fea12c30dcabfcd0d8fc
Comment 3 Christoph Cullmann 2023-09-17 11:44:18 UTC
Git commit ddbb49db25c0ab0d4f4418e139f2bf3c74683965 by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 17/09/2023 at 13:39.
Pushed by cullmann into branch 'master'.

Fix space painted over text in bidirection text lines

Checks the previous char's direction and adjusts the x offset accordingly

M  +23   -12   src/render/katerenderer.cpp
M  +1    -1    src/render/katerenderer.h

https://invent.kde.org/frameworks/ktexteditor/-/commit/ddbb49db25c0ab0d4f4418e139f2bf3c74683965