Fix spaces not visualized in rtl text

BUG: 474551